swagger implementado e mais anotaçoes
